--- a/plugin.yml
+++ b/plugin.yml
@@ -2,6 +2,6 @@ name: Colormatic
 main: Colormatic\Main
 load: STARTUP
 version: 1.0.2
-api: 3.0.0-ALPHA11
+api: 3.0.0-ALPHA11,3.0.0-ALPHA12
 author: TheDeibo
 description: Adds a customisable color symbol to use instead of `§`. 
